--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html, body {
     margin-bottom: 2px;
   }
   .wrapper {
-    background-color: lightpink;
+    background-color: lightslategrey;
     
     max-width: 50%;
     display: flex;
@@ -63,4 +63,4 @@ html, body {
   .body {
     background: linear-gradient(to bottom, rgba(231, 240, 245, 1) 0%, rgba(170, 221, 235, 1) 100%);
   }
-  view raw
+  
